// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTOC organizes TOC based on sidebar configuration 1`] = `
"### Test Section

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool

### Quickstart Section

- [Quickstart](/test/quickstart.md): Instructions for quick project initialization

### Other

- [Some other section](/test/other.md)
"
`;

exports[`generateLLMsTxt generates a \`llms.txt\` file 1`] = `
"# Some cool tool

> Blazing fast frontend tool

## Table of Contents

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool
- [Quickstart](/test/quickstart.md): Instructions for quick project initialization
- [Some other section](/test/other.md)
"
`;

exports[`generateLLMsTxt works correctly with a custom template 1`] = `
"# Custom title

> Custom description

## TOC

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool
- [Quickstart](/test/quickstart.md): Instructions for quick project initialization
- [Some other section](/test/other.md)
"
`;

exports[`generateLLMsTxt works correctly with a custom template variables 1`] = `
"# foo

> bar

## Table of Contents

zoo"
`;

exports[`generateLLMsTxt works correctly with a custom template and variables 1`] = `
"# {foo}

**{bar}**

{zoo}"
`;

exports[`generateLLMsFullTxt generates a \`llms-full.txt\` file 1`] = `
"---
url: /test/getting-started.md
description: Instructions on how to get started with the tool
---

# Installation

blah blah blah...

---

---
url: /test/quickstart.md
description: Instructions for quick project initialization
---

# Project initialization

blah blah blah...

---

---
url: /test/other.md
---
# Some cool stuff
"
`;

exports[`generateLLMsFullTxt correctly attaches the domain to URLs in context 1`] = `
"---
url: 'https://example.com/test/getting-started.md'
description: Instructions on how to get started with the tool
---

# Installation

blah blah blah...

---

---
url: 'https://example.com/test/quickstart.md'
description: Instructions for quick project initialization
---

# Project initialization

blah blah blah...

---

---
url: 'https://example.com/test/other.md'
---
# Some cool stuff
"
`;

exports[`generateTOC handles object-based sidebar configuration correctly 1`] = `
"### Getting Started

- [Getting started](/test/getting-started.md): Instructions on how to get started with the tool

### API Reference

- [Quickstart](/test/quickstart.md): Instructions for quick project initialization

### Other

- [Some other section](/test/other.md)
"
`;
